[gd_scene load_steps=10 format=3 uid="uid://dldree3yvcavu"]

[ext_resource type="Texture2D" uid="uid://ce2hb2ty73ted" path="res://img/Untitled 11.png" id="1_lkbqq"]
[ext_resource type="Script" path="res://prefab/torch.gd" id="1_lmyb7"]
[ext_resource type="Texture2D" uid="uid://b7mvwlvnnrm2u" path="res://img/fire_particle.png" id="2_saw2t"]
[ext_resource type="Script" path="res://interaction/interaction area/interaction_area.gd" id="3_r471j"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ffymy"]

[sub_resource type="Curve" id="Curve_jnx0n"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.547532), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_t1a53"]
curve = SubResource("Curve_jnx0n")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mjhx2"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
direction = Vector3(1, 2.08165e-12, 2.08165e-12)
angular_velocity_max = 720.0
gravity = Vector3(2.08165e-12, -80, 2.08165e-12)
scale_min = 0.4
scale_max = 1.6
scale_curve = SubResource("CurveTexture_t1a53")
turbulence_noise_strength = 0.0
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kxmdk"]
radius = 26.0192

[node name="torch" type="StaticBody2D"]
script = ExtResource("1_lmyb7")

[node name="Untitled11" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -24)
texture = ExtResource("1_lkbqq")

[node name="FireTorch" type="Node2D" parent="."]
position = Vector2(4, -21)

[node name="orange" type="GPUParticles2D" parent="FireTorch"]
modulate = Color(1, 0.615686, 1, 1)
texture_filter = 1
material = SubResource("CanvasItemMaterial_ffymy")
position = Vector2(-2, -8)
amount = 15
process_material = SubResource("ParticleProcessMaterial_mjhx2")
texture = ExtResource("2_saw2t")
speed_scale = 2.0
explosiveness = 0.25

[node name="yellow" type="GPUParticles2D" parent="FireTorch"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_ffymy")
position = Vector2(-1, -4)
amount = 20
process_material = SubResource("ParticleProcessMaterial_mjhx2")
texture = ExtResource("2_saw2t")
lifetime = 0.8
speed_scale = 2.0
explosiveness = 0.25

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -29)
shape = SubResource("CircleShape2D_kxmdk")
disabled = true

[node name="InteractionArea" type="Area2D" parent="."]
script = ExtResource("3_r471j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(2, -29)
shape = SubResource("CircleShape2D_kxmdk")

[connection signal="area_entered" from="InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_shape_entered" from="InteractionArea" to="." method="_on_interaction_area_area_shape_entered"]
[connection signal="area_shape_exited" from="InteractionArea" to="." method="_on_interaction_area_area_shape_exited"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_shape_entered" from="InteractionArea" to="." method="_on_interaction_area_body_shape_entered"]
